refactor: rename provicer attributes and refac Registry

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc:watch": "tsc --watch",
+    "tsc:watch": "rm -rf out && tsc --watch",
     "start": "node --watch ./out/main/main.js"
   },
   "keywords": [],
