--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "fastify": "^5.4.0",
+    "fastify-type-provider-zod": "^4",
     "reflect-metadata": "^0.2.2",
     "zod": "^3.25.67"
   }
